--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,7 @@
 <footer>
   <small>
-    This project is maintained by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
-    Check out the <a href="{{ pkg.repository.url }}">Github repo</a>.
+	  <code>
+	  	¯\_(ツ)_/¯
+	  </code>
   </small>
 </footer>
