--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -2,6 +2,7 @@
 	--grey: #EEEEEE;
 	--white: white;
 	--blue: blue;
+	--font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 *, *:before, *:after {
@@ -12,13 +13,10 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	font-family: var(--font);
 }
 
 body {
-	display: grid;
-	height: 100vh;
-	grid-template-rows: auto 1fr auto;
 	background-color: var(--white);
 }
 
@@ -186,8 +184,9 @@ button {
 	cursor: pointer;
 }
 
-@media screen and (min-width:768px) {
+/*@media screen and (min-width:768px) {
 	:root {
 		font-size: 1.1rem;
 	}
 }
+*/
