--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -2,6 +2,7 @@
 	--grey: #EEEEEE;
 	--white: white;
 	--blue: blue;
+	--black: black;
 	--font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
@@ -13,30 +14,22 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: var(--font);
 }
 
 body {
 	background-color: var(--white);
+	font-family: var(--font);
+	line-height: 1.5;
+	color: var(--black);
 }
 
 main {
 	max-width: 37.5em;
 }
 
-p,
-pre,
-code {
-	line-height: 1.5;
-}
-
 a[href],
 a[href]:visited {
-	color: var(--blue);
-}
-
-a[href]:not(:hover) {
-	text-decoration: none;
+	color: var(--black);
 }
 
 header,
@@ -71,18 +64,13 @@ pre {
 	margin: .5em 0;
 }
 
-ul {
-	padding: 0;
-	list-style: none;
-}
-
 hr {
 	border-top: none;
 	border-bottom: 1px solid #eee;
 	border-bottom: 1px solid var(--grey);
 }
 
-/* Header Logo (style as h2) */
+
 header > em {
 	display: block;
 	font-size: 1em;
@@ -91,7 +79,6 @@ header > em {
 	font-style: normal;
 }
 
-/* Header Nav */
 header nav ul :first-child {
 	margin-left: 0;
 }
@@ -127,18 +114,18 @@ main > section > article > * {
 a[rel="tag"],
 a[rel="tag"]:visited {
 	display: inline-block;
-  vertical-align: text-top;
-  text-transform: uppercase;
+    vertical-align: text-top;
+    text-transform: uppercase;
 	letter-spacing: .1em;
-  font-size: .625em;
-  padding: 0 .5em;
+    font-size: .625em;
+    padding: 0 .5em;
 	line-height: 2em;
 	height: 2em;
-  border: 1px solid var(--grey);
+    border: 1px solid var(--grey);
 	background-color: var(--grey);
 	color: var(--blue);
-  border-radius: .25em;
-  text-decoration: none;
+    border-radius: .25em;
+    text-decoration: none;
 	margin: 0 .5em .5em 0;
 }
 
@@ -150,38 +137,6 @@ a[rel="tag"]:hover {
 
 a[rel="tag"]:last-child {
 	margin-right: 0;
-}
-
-/* Contact Form */
-form {
-  display: grid;
-	padding: 2em 0;
-}
-
-form label {
-  display: none;
-}
-
-input,
-textarea,
-button {
-  width: 100%;
-  padding: 1em;
-  margin-bottom: 1em;
-	font-size: 1rem;
-	font-family: "Avenir", "Avenir Next", sans-serif;
-}
-
-input,
-textarea {
-	border: 1px solid black;
-}
-
-button {
-	border: 1px solid var(--blue);
-	background-color: var(--blue);
-	color: var(--white);
-	cursor: pointer;
 }
 
 /*@media screen and (min-width:768px) {
