--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -27,5 +27,5 @@ section: post
 </article>
 
 <nav>
-  <a href="{{ '/blog/' | url }}">← Blog index</a>
+  <a href="{{ '/writing/' | url }}">← Writing index</a>
 </nav>
