--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,7 +1,6 @@
 <footer>
   <small>
-	  <code>
-	  	¯\_(ツ)_/¯
-	  </code>
+  	<a href="mailto:me@kkga.me">me@kkga.me</a>,
+  	<a href="https://twitter.com/kkga_">@kkga_</a>
   </small>
 </footer>
