--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,55 +1,77 @@
 :root {
 	--grey: #EEE;
-	--darkgrey: #888;
+	--darkgrey: #707070;
 	--white: white;
 	--blue: blue;
 	--black: black;
-	--font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	--font: 
+	/*--font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;*/
 }
 
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
-html,
 body {
-	padding: 0;
-	margin: 0;
+	margin: 1rem;
 }
 
 body {
 	background-color: var(--white);
-	font-family: var(--font);
+	font-family: "Iosevka Slab Web", monospace;
 	line-height: 1.5;
 	color: var(--black);
 }
 
-main {
-	max-width: 37.5em;
-}
-
-a,
-a:visited {
-	color: currentColor;
+h1,
+h2,
+h3,
+h4,
+h5
+h6 {
+	font-size: 1em;
+	text-transform: uppercase;
 }
 
 header,
 main,
 footer {
-	padding: 1em;
+	max-width: 40em;
+	max-width: 75ch;
+	margin: 0 auto;
+}
+
+a,
+a:visited {
+	color: currentColor;
+	text-decoration-style: dotted;
+	-webkit-text-decoration-style: dotted;
+}
+a:hover {
+	text-decoration-style: solid;
+	-webkit-text-decoration-style: solid;
 }
 
 main {
-	padding-bottom: 2em;
+	padding: 2em 0;
 }
 
-main :first-child,
+/*main :first-child,
 main > article :first-child {
 	margin-top: 0;
-}
+}*/
 
 small {
-    color: var(--darkgrey);
+	color: var(--darkgrey);
+	/*text-transform: uppercase;*/
+}
+
+blockquote {
+	font-style: italic;
+	font-weight: bold;
+	margin-left: 0;
+	margin-right: 0;
+	color: var(--darkgrey);
 }
 
 pre {
@@ -69,6 +91,7 @@ pre {
 	margin: .5em 0;
 }
 
+header,
 hr {
 	border-top: none;
 	border-bottom: 1px solid #eee;
@@ -123,28 +146,11 @@ main > section > article > * {
 /* Post Tags */
 a[rel="tag"],
 a[rel="tag"]:visited {
-	display: inline-block;
-  text-transform: uppercase;
-	letter-spacing: .1em;
-  font-size: .625em;
-  font-weight: bold;
-  padding: 0.15em .5em;
-  border: 1px solid var(--grey);
-	background-color: var(--grey);
-	color: currentColor;
-  border-radius: .25em;
   text-decoration: none;
-	margin: 0 .5em .5em 0;
 }
 
 a[rel="tag"]:hover {
-	border: 1px solid var(--blue);
-	background-color: var(--blue);
-	color: var(--white);
-}
-
-a[rel="tag"]:last-child {
-	margin-right: 0;
+	color: var(--black);
 }
 
 /*@media screen and (min-width:768px) {
