--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -16,20 +16,22 @@
 				</p>
 			{% endif %}
 			<p>
-				<time datetime="{{ post.date | machineDate }}">
-					<small>{{ post.date | readableDate }} by {{ metadata.author.name }}</small>
-				</time>
+				<small>
+					<time datetime="{{ post.date | machineDate }}">
+						{{ post.date | readableDate }}
+					</time>
+					{% if post.data.tags %}
+						<span>&middot;</span>
+						{% for tag in post.data.tags %}
+			  			{%- if tag != "post" -%}
+			  				{% set tagUrl %}/tags/{{ tag }}/{% endset %}
+			  			<a href="{{ tagUrl | url }}" rel="tag">#{{ tag }}</a>
+			  			{%- endif -%}
+						{% endfor %}
+					{% endif %}
+				</small>
 			</p>
-			{% if post.data.tags %}
-				<p>
-					{% for tag in post.data.tags %}
-		  			{%- if tag != "post" -%}
-		  				{% set tagUrl %}/tags/{{ tag }}/{% endset %}
-		  			<a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
-		  			{%- endif -%}
-					{% endfor %}
-				</p>
-			{% endif %}
+
 		</article>
 	{% endfor %}
 </section>
