--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,6 +2,11 @@
 layout: layouts/base.njk
 section: page
 ---
-<h1>{{ title }}</h1>
+
+<p>
+	<small>
+	  Updated: <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
+	</small>
+</p>
 
 {{ layoutContent | safe }}
