--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -7,22 +7,21 @@ section: post
   <h1>{{ title }}</h1>
   <p>
     <small>
-      Published on <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
+      <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
+
+      {% if tags %}
+        <span>&middot;</span>
+        {% for tag in tags %}
+          {%- if tag != "post" -%}
+            {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+            <a href="{{ tagUrl | url }}" rel="tag">#{{ tag }}</a>
+          {%- endif -%}
+        {% endfor %}
+      {% endif %}
     </small>
   </p>
 
   {{ layoutContent | safe }}
-
-  {% if tags %}
-    <p>
-    {% for tag in tags %}
-      {%- if tag != "post" -%}
-        {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-        <a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
-      {%- endif -%}
-    {% endfor %}
-    </p>
-  {% endif %}
 
 </article>
 
