--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,7 @@
 <footer>
   <small>
-  	<a href="mailto:me@kkga.me">me@kkga.me</a>,
+  	<a href="mailto:me@kkga.me">me@kkga.me</a>
+    &middot;
   	<a href="https://twitter.com/kkga_">@kkga_</a>
   </small>
 </footer>
