--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -18,7 +18,6 @@
   --color-divider: var(--g-09);
 
   --font: "Iosevka Slab Web", monospace;
-  /* --font: "Input Sans Condensed", monospace; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -85,6 +84,10 @@ main {
 main > article :first-child {
 	margin-top: 0;
 }*/
+
+img {
+  max-width: 100%;
+}
 
 small {
   color: var(--color-text-dim);
