--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -91,7 +91,7 @@ img {
 
 small {
   color: var(--color-text-dim);
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 blockquote {
