--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -17,7 +17,7 @@
   --color-text-dim: var(--g-06);
   --color-divider: var(--g-09);
 
-  --font: "Iosevka Slab Web", monospace;
+  --font: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif," "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
 @media (prefers-color-scheme: dark) {
