--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -55,14 +55,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-size: 1em;
-  font-family: var(--font-sans);
-}
-h1 {
-  font-size: 2em;
-}
-
+h6,
 header,
 nav,
 footer {
