--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -84,10 +84,10 @@ main {
   padding: 2em 0;
 }
 
-/*main :first-child,
+main :first-child,
 main > article :first-child {
-	margin-top: 0;
-}*/
+  margin-top: 0;
+}
 
 img {
   max-width: 100%;
@@ -96,7 +96,6 @@ img {
 small {
   color: var(--color-text-dim);
   font-family: var(--font-sans);
-  /* text-transform: uppercase; */
 }
 
 blockquote {
