--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -17,7 +17,7 @@
   --color-text-dim: var(--g-06);
   --color-divider: var(--g-09);
   
-  --content-width: 40em;
+  --content-width: 37.5em;
 
   --font-serif: Charter, Georgia, serif;
   --font-sans: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
@@ -62,6 +62,17 @@ footer {
   font-family: var(--font-sans);
 }
 
+h1 {
+  font-size: 2.5em;
+  margin: 1em 0;
+}
+h2 { font-size: x-large }
+h3 { font-size: large }
+h4 { font-size: medium }
+h5 { font-size: small }
+h6 { font-size: x-small }
+h1, h2 { line-height: 1.25 }
+
 header,
 main,
 footer {
@@ -81,12 +92,15 @@ a:hover {
 }
 
 main {
-  padding: 2em 0;
+  padding: 4em 0;
 }
 
 main :first-child,
 main > article :first-child {
   margin-top: 0;
+}
+main > article > h1 {
+  margin-bottom: 0;
 }
 
 img {
@@ -106,6 +120,10 @@ blockquote {
   border-left: 4px solid var(--color-divider);
 }
 
+ul {
+  padding-left: 1em;
+}
+
 pre {
   font-size: 14px;
   direction: ltr;
@@ -123,22 +141,32 @@ pre {
   margin: 0.5em 0;
 }
 
-header,
 hr {
   border: none;
   border-bottom: 1px solid var(--color-divider);
 }
 
+
+/* Header */
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+header nav {
+  text-transform: lowercase;
+}
+
 header > em {
   display: block;
-  font-size: 1em;
-  margin: 0.67em 0;
   font-weight: bold;
   font-style: normal;
 }
 
 header nav ul {
   padding: 0;
+  margin: 0;
 }
 
 header nav ul :first-child {
@@ -147,27 +175,42 @@ header nav ul :first-child {
 
 header nav li {
   display: inline-block;
-  margin: 0 0.5em;
+}
+header nav li:not(:last-child):after {
+  content: '\a0\b7\a0';
 }
 
-header nav li a:not(:hover) {
+header em a {
+  text-decoration: none;
+}
+
+nav a:not(:hover) {
   color: var(--color-text-dim);
   text-decoration: none;
 }
 
 header nav li a[data-current="current item"] {
-  font-weight: 700;
   color: currentColor;
   text-decoration: underline;
 }
 
 /* Posts List */
-article {
+main > section > article {
+  margin-bottom: 2em;
+}
+main > section > article > h3 {
+  margin-bottom: 0;
+}
+main > section > article > nav > a {
+  color: var(--color-text-dim);
+}
+
+/*article {
   margin-bottom: 1em;
   padding-bottom: 1em;
   border-bottom: 1px solid var(--color-divider);
 }
-
+*/
 main > section > article > * {
   margin-top: 0;
   margin-bottom: 0.5em;
