--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-  {%- for nav in collections.nav | sort(attribute="navorder") -%}
+  {%- for nav in collections.nav | sort(attribute="date") -%}
     <li>
       <a href="{{ nav.url | url }}"{% if nav.url == page.url %} data-current="current item"{% endif %}>{{ nav.data.navtitle }}</a>
     </li>
