--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
 
 		<header>
 			<em>
-				{{ metadata.title }}
+				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
 			</em>
 			{% include "components/nav.njk" %}
 		</header>
