--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -4,6 +4,8 @@ section: blog
 permalink: /blog/index.html
 ---
 
+<h1>{{ title }}</h1>
+
 {{ layoutContent | safe }}
 
 {% set postslist = collections.posts %}
