--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -16,12 +16,12 @@
   --color-text: var(--g-01);
   --color-text-dim: var(--g-06);
   --color-divider: var(--g-09);
-  
+
   --content-width: 37.5em;
 
   --font-serif: Charter, Georgia, serif;
-  --font-sans: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-
+  --font-sans: system, -apple-system, ".SFNSText-Regular", "San Francisco",
+    "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -46,7 +46,7 @@ body {
 body {
   background-color: var(--color-body);
   font-family: var(--font-serif);
-  line-height: 1.5;
+  line-height: 1.6;
   color: var(--color-text);
 }
 
@@ -63,15 +63,28 @@ footer {
 }
 
 h1 {
-  font-size: 2.5em;
-  margin: 1em 0;
+  font-size: 2em;
+  line-height: 1.1;
+  margin: 0 0 0.25em 0;
+  border-bottom: 1px solid var(--color-divider);
 }
-h2 { font-size: x-large }
-h3 { font-size: large }
-h4 { font-size: medium }
-h5 { font-size: small }
-h6 { font-size: x-small }
-h1, h2 { line-height: 1.25 }
+h2 {
+  font-size: 1.3em;
+  line-height: 1.2;
+}
+h3 {
+  font-size: 1.1em;
+  line-height: 1.3;
+}
+h4 {
+  font-size: medium;
+}
+h5 {
+  font-size: small;
+}
+h6 {
+  font-size: x-small;
+}
 
 header,
 main,
@@ -92,19 +105,16 @@ a:hover {
 }
 
 main {
-  padding: 4em 0;
+  padding: 2em 0;
 }
 
 main :first-child,
 main > article :first-child {
   margin-top: 0;
 }
-main > article > h1 {
-  margin-bottom: 0;
-}
-
-img {
-  max-width: 100%;
+main h1 {
+  padding-bottom: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 small {
@@ -118,10 +128,6 @@ blockquote {
   margin-right: 0;
   padding-left: 1em;
   border-left: 4px solid var(--color-divider);
-}
-
-ul {
-  padding-left: 1em;
 }
 
 pre {
@@ -142,17 +148,17 @@ pre {
 }
 
 hr {
+  margin: 1em 0;
   border: none;
   border-bottom: 1px solid var(--color-divider);
 }
 
-
 /* Header */
 
-header {
+/*header {
   display: flex;
   justify-content: space-between;
-}
+}*/
 
 header nav {
   text-transform: lowercase;
@@ -162,11 +168,12 @@ header > em {
   display: block;
   font-weight: bold;
   font-style: normal;
+  margin: 0.5em 0;
 }
 
 header nav ul {
   padding: 0;
-  margin: 0;
+  margin: 0.5em 0;
 }
 
 header nav ul :first-child {
@@ -177,7 +184,7 @@ header nav li {
   display: inline-block;
 }
 header nav li:not(:last-child):after {
-  content: '\a0\b7\a0';
+  content: "\a0\b7\a0";
 }
 
 header em a {
@@ -194,7 +201,8 @@ header nav li a[data-current="current item"] {
   text-decoration: underline;
 }
 
-/* Posts List */
+/* Posts List and Article */
+
 main > section > article {
   margin-bottom: 2em;
 }
@@ -203,6 +211,14 @@ main > section > article > h3 {
 }
 main > section > article > nav > a {
   color: var(--color-text-dim);
+}
+
+main header {
+  margin-bottom: 2em;
+}
+
+main header small {
+  display: block;
 }
 
 /*article {
@@ -216,7 +232,23 @@ main > section > article > * {
   margin-bottom: 0.5em;
 }
 
+ul {
+  padding-left: 0;
+  list-style: square;
+}
+
+ul ul {
+  padding-left: 2em;
+  list-style: circle;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
 /* Post Tags */
+
 a[rel="tag"],
 a[rel="tag"]:visited {
   text-decoration: none;
@@ -226,14 +258,9 @@ a[rel="tag"]:hover {
   color: var(--color-text);
 }
 
-/* Footer */
-footer > small {
-  text-transform: none;
+@media screen and (min-width: 768px) {
+  header {
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+  }
 }
-
-/*@media screen and (min-width:768px) {
-	:root {
-		font-size: 1.1rem;
-	}
-}
-*/
