--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -1,10 +1,18 @@
 ---
 layout: layouts/base.njk
 section: blog
-permalink: /blog/index.html
+permalink: /writing/index.html
 ---
 
-<h1>{{ title }}</h1>
+<header>
+	<h1>{{ title }}</h1>
+
+	{% if subtext %} 
+	<small>
+	  {{subtext}}{% if date %}. Updated <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>.{% endif %}
+	</small>
+	{% endif %}
+</header>
 
 {{ layoutContent | safe }}
 
