--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,22 +4,25 @@ section: post
 ---
 
 <article>
-  <h1>{{ title }}</h1>
-  <small>
-    <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
 
-    {% if tags %}
-      <span>&middot;</span>
-      {% for tag in tags %}
-        {%- if tag != "post" -%}
-          {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-          <a href="{{ tagUrl | url }}" rel="tag">#{{ tag }}</a>
-        {%- endif -%}
-      {% endfor %}
-    {% endif %}
-  </small>
+    <header>
+        <h1>{{ title }}</h1>
+        <small>
+            <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
 
-  {{ layoutContent | safe }}
+            {% if tags %}
+              <span>&middot;</span>
+              {% for tag in tags %}
+                {%- if tag != "post" -%}
+                  {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+                  <a href="{{ tagUrl | url }}" rel="tag">#{{ tag }}</a>
+                {%- endif -%}
+              {% endfor %}
+            {% endif %}
+        </small>
+    </header>
+
+    {{ layoutContent | safe }}
 
 </article>
 
