--- a/tags.njk
+++ b/tags.njk
@@ -18,5 +18,5 @@ layout: layouts/base.njk
 {% include "components/postslist.njk" %}
 
 <nav>
-  <a href="{{ '/blog/' | url }}">← Blog index</a>
+  <a href="{{ '/writing/' | url }}">← Writing index</a>
 </nav>
