--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title or metadata.title }}</title>
   {% set css %}
+    {% include "assets/css/layout.css" %}
     {% include "assets/css/inline.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
