--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -108,7 +108,7 @@ h6 {
 small,
 nav {
   color: var(--color-text-dim);
-  font-family: var(--font-mono);
+  font-family: var(--font-sans);
   font-size: smaller;
   font-weight: 500;
 }
@@ -122,7 +122,6 @@ blockquote {
 }
 
 pre {
-  font-size: smaller;
   line-height: 1.25;
   font-family: var(--font-mono);
   background-color: var(--color-divider);
